--- a/style.css
+++ b/style.css
@@ -11,9 +11,9 @@ body {
 }
 
 .main {
-    background-image: url("assets/images/bg.jpg");
+    background-image: url("assets/bg.jpg");
     background-position: center center;
-    background-size: max(1200px, 100vw);
+    background-size: cover;
     background-repeat: no-repeat;
     height: 644px;
     position: relative;
@@ -22,11 +22,12 @@ body {
 .main .box {
     height: 644px;
     width: 100%;
-    opacity: 0.69;
+    opacity: 0.6;
     position: absolute;
     top: 0;
     background-color: black;
 }
+
 
 nav {
     max-width: 60vw;
@@ -62,24 +63,24 @@ nav button {
     padding: 0 30px;
 }
 
-.hero> :nth-child(1) {
-    font-family: 'Poppins', sans-serif;
-    font-weight: bolder;
+.hero > :nth-child(1) {
     font-size: 48px;
+    font-weight: 900;
     text-align: center;
 }
 
-.hero> :nth-child(2) {
-    font-weight: 400;
-    font-size: 24px;
-    text-align: center;
-}
-
-.hero> :nth-child(3) {
-    font-weight: 400;
+.hero > :nth-child(2) {
     font-size: 20px;
+    font-weight: 400;
     text-align: center;
 }
+
+.hero > :nth-child(3) {
+    font-size: 16px;
+    font-weight: 300;
+    text-align: center;
+}
+
 
 .separation {
     height: 7px;
