--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 
-nav {
+/*nav {
     max-width: 60vw;
     justify-content: space-between;
     margin: auto;
@@ -49,7 +49,44 @@ nav button {
     position: relative;
     z-index: 10;
 }
+*/ 
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 60px;
+  background-color: rgba(0, 0, 0, 0.8);
+  position: sticky;
+  top: 0;
+  z-index: 10;
+}
 
+.navbar .logo img {
+  width: 130px;
+}
+
+.nav-links {
+  display: flex;
+  gap: 30px;
+  list-style: none;
+}
+
+.nav-links li a {
+  text-decoration: none;
+  color: white;
+  font-weight: 500;
+  transition: color 0.3s;
+}
+
+.nav-links li a:hover {
+  color: #e50914;
+  text-shadow: 0 0 10px red;
+}
+
+.nav-buttons {
+  display: flex;
+  gap: 10px;
+}
 .hero {
     font-family: 'Martel Sans', sans-serif;
     height: calc(100% - 100px);
