navbar changes-to space around for

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ nav button {
   width:100%;
   z-index: 999;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   padding: 20px 60px;
   background-color: rgba(0, 0, 0, 0.8);
